--- a/index.html
+++ b/index.html
@@ -42,11 +42,27 @@ system, Robotics, Digital control.</li>
 
 <h2>Work Experience</h2>
 
+<h3>Mobile Developer (Xamarin, Native Android)</h3>
+
+<h4>Altran Italia S.p.A</h4>
+
+<h4>June. 2018 - Present (1 year)</h4>
+
+<ul>
+<li>I am working at Altran Italia as Mobile Developer. Below, there are brief summary of my roles.</li>
+<li>As Mobile developer, following are my projects:</li>
+<li>1. Ansaldo Project. I develop mobile applications for our client Ansaldo for monitoring their worker status and operations. Technology: Xamarin Forms and Prism framework</li>
+<li>2. CAME Project. This is a domotic project developed for CAME S.P.A. I develop mobile applications (android and iOS) based on Xamarin Forms and Prism framework</li>
+<li>3. ElettraGas Project. I am a maintainer for this project which are mobile applications for an Italian company (Elettragas). Project was used Xamarin Forms as technology for builing up mobile applications.</li>
+<li>As Full-Stack developer, following are my projects:</li>
+<li>1. ISYSPortal Project. This is a project for stuffing management internally our company.</li>
+</ul>
+
 <h3>Consultant - Software Integrator/Developer</h3>
 
 <h4>Altran Italia S.p.A</h4>
 
-<h4>Jan. 2016 - Present</h4>
+<h4>Jan. 2016 - May. 2018 (2.5 years)</h4>
 
 <ul>
 <li>I am working at Magneti Marelli S.p.A in Italia for a telematics project. Below, there are brief summary of my roles.</li>
@@ -58,16 +74,18 @@ system, Robotics, Digital control.</li>
 <li>I support a new telematic project for setting up its integration process.</li>
 </ul>
 
-<h3>Self-motivated Software Developer</h3>
+<h3>Freelancer - Mobile Developer</h3>
 
-<h4>Dec. 2016 - present</h4>
+<h4>Dec. 2016 - present (2.5+ years)</h4>
 
 <ul>
 <li>I work as an independent Software Developer producing Android applications, and open-source projects.</li>
 <li>Google Play Store:</li>
-<li>BluChat https://play.google.com/store/apps/details?id=tientham.bluetoothdemo</li>
-<li>Movie Wiki https://play.google.com/store/apps/details?id=tientham.movie_wiki</li>
-<li>Daily Notes https://play.google.com/store/apps/details?id=tientham.daily_notes</li>
+<li><a href="https://play.google.com/store/apps/details?id=vn.tientham.visualsupportforautism">App4Autism (2500+ downloads)</a></li>
+<li><a href="https://play.google.com/store/apps/details?id=tientham.androidtimer">App4Timer (2000+ downloads)</a></li>
+<li><a href="https://play.google.com/store/apps/details?id=tientham.bluetoothdemo">BluChat (5000+ downloads)</a></li>
+<li><a href="https://play.google.com/store/apps/details?id=tientham.movie_wiki">Movie Wiki (3500+ downloads)</a></li>
+<li><a href="https://play.google.com/store/apps/details?id=tientham.daily_notes">Daily Notes</a></li>
 </ul>
 
 <h3>Master Thesis</h3>
