--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ system, Robotics, Digital control.</li>
 
 <h4>Altran Italia S.p.A</h4>
 
-<h4>June. 2018 - Present (1 year)</h4>
+<h4>June. 2018 - Present (1 year) </h4>
 
 <ul>
 <li>I am working at Altran Italia as Mobile Developer. Below, there are brief summary of my roles.</li>
@@ -62,7 +62,7 @@ system, Robotics, Digital control.</li>
 
 <h4>Altran Italia S.p.A</h4>
 
-<h4>Jan. 2016 - May. 2018 (2.5 years)</h4>
+<h4>Jan. 2016 - May. 2018 (2.5 years) </h4>
 
 <ul>
 <li>I am working at Magneti Marelli S.p.A in Italia for a telematics project. Below, there are brief summary of my roles.</li>
@@ -76,7 +76,7 @@ system, Robotics, Digital control.</li>
 
 <h3>Freelancer - Mobile Developer</h3>
 
-<h4>Dec. 2016 - present (2.5+ years)</h4>
+<h4>Dec. 2016 - present (2.5+ years) </h4>
 
 <ul>
 <li>I work as an independent Software Developer producing Android applications, and open-source projects.</li>
@@ -106,8 +106,10 @@ system, Robotics, Digital control.</li>
 <ul>
 <li>problem solving, work in team.</li>
 <li>Solid knowledge of data structure, object-Oriented programming and design patterns.</li>
-<li>1+ year experience on Android application development.</li>
-<li>1+ year experience on Java development.</li>
+<li>2+ year on Native Android</li>
+<li>1+ year on Xamarin (Xamrin Forms, Prism, v.v..)</li>
+<li>1+ year on Fullstack (Nodejs, Ejs, Html, Angular 6, v.v..)</li>
+<li>2+ year on Java</li>
 </ul>
 
 <hr />
